src-ken&y/objects/Work_Center_Resource__c.object
<CustomObject>
    <customHelpPage>HelpWorkCenterResource</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Work Center Resources</relationshipLabel>
        <relationshipName>Work_Center_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company does not match Resource Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Work Center Resources</relationshipLabel>
        <relationshipName>Work_Center_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Calendar</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Calendar__c.Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing</value>
            </filterItems>
            <filterItems>
                <field>Calendar__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Work Center Resources</relationshipLabel>
        <relationshipName>Work_Center_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of the resource available at this work center</description>
        <inlineHelpText>Quantity of the resource available at this work center</inlineHelpText>
        <label>Quantity Available</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Resource</description>
        <inlineHelpText>Lookup to Resource</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Resource Facility does not match Work Center Resource Facility</errorMessage>
            <filterItems>
                <field>Resource__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Center Resources</relationshipLabel>
        <relationshipName>Work_Center_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Center_Resource_Unique__c</fullName>
        <label>Work Center Resource Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Center</description>
        <inlineHelpText>Lookup to Work Center</inlineHelpText>
        <label>Work Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Work Center Facility does not match Work Center Resource Facility</errorMessage>
            <filterItems>
                <field>Work_Center__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Center__c</referenceTo>
        <relationshipLabel>Work Center Resources</relationshipLabel>
        <relationshipName>Work_Center_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Center Resource</label>
    <nameField>
        <label>Work Center Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Center Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>